# Games101-Homework-Win

./: CMakeLists.txt  Readme.md
myanswer0/: CMakeLists.txt  main.cpp
myanswer1/: CMakeLists.txt  main.cpp
myanswer2/: CMakeLists.txt  main.cpp  rasterizer.cpp
myanswer3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
myanswer4/: CMakeLists.txt  main.cpp
myanswer5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  binary.ppm  main.cpp
myanswer6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
myanswer7/: .clang-format  BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  binary-spp=16.ppm  global.hpp  main.cpp
myanswer8/src/: rope.cpp
