cmake_minimum_required(VERSION 3.2)
project (Games101)

# add_subdirectory(freetype)
# add_subdirectory(Assignment0)
# add_subdirectory(Assignment1)
# add_subdirectory(Assignment2)
# add_subdirectory(Assignment3)
# add_subdirectory(Assignment4)
# add_subdirectory(Assignment5)
# add_subdirectory(Assignment6)
# add_subdirectory(Assignment7)
# add_subdirectory(Assignment8)

add_subdirectory(myanswer0)
add_subdirectory(myanswer1)
add_subdirectory(myanswer2)
add_subdirectory(myanswer3)
add_subdirectory(myanswer4)
add_subdirectory(myanswer5)
add_subdirectory(myanswer6)
add_subdirectory(myanswer7)
add_subdirectory(myanswer8)
